# tsoha-keskustelusovellus

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline.yml
client/: .eslintrc.json  Dockerfile  package-lock.json  package.json
client/public/: index.html
client/src/: App.jsx  config.js
client/src/assets/: styles.js
client/src/components/: AddPicture.jsx  Boards.jsx  Footer.jsx  Header.jsx  Login.jsx  Posts.jsx  Search.jsx  Threads.jsx  User.jsx  UserProvider.js  UserProvider.jsx
client/src/components/boards/: Board.jsx  index.jsx
client/src/components/post/: MakePost.jsx  Posts.jsx
client/src/components/posts/: AddImage.jsx  MakePost.jsx  Post.jsx  index.jsx
client/src/components/thread/: MakeThread.jsx  Threads.jsx
client/src/components/threads/: MakeThread.jsx  Thread.jsx  ThreadButtons.jsx  index.jsx
client/src/components/user/: MakeUser.jsx  UserProvider.jsx  index.jsx
client/src/services/: boards.js  images.js  login.js  posts.js  threads.js  user.js
server/: Dockerfile  env.template  pyproject.toml
server/src/: app.py  config.py
server/src/database/: init_db.py  queries.py  schema.py  testing.py
server/src/routes/: boards.py  images.py  login.py  posts.py  threads.py  users.py
server/src/services/: parser.py  response.py  user.py
src/: app.py  config.py  db.py  index.py  init_db.py
src/database/: init_db.py  queries.py  testing.py
src/routes/: boards.py  hello.py  login.py  posts.py  threads.py  users.py
src/services/: db.py  response.py
(+4 files in other folders)
