[tool.poetry]
name = "tsoha-keskustelusovellus"
version = "0.1.0"
description = "Flask based messaging application"
authors = ["Miko Keskimäki <miko.keskimaki@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
pylint-flask = "^0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
