[tool.poetry]
name = "tsoha-keskustelusovellus"
version = "0.1.0"
description = "Flask based messaging application"
authors = ["Miko Keskimäki <miko.keskimaki@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.19.2"
Flask-Cors = "^3.0.10"
Flask-JWT-Extended = "^4.3.1"
Flask-Bcrypt = "^0.7.1"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
pylint-flask = "^0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
